# ergodicfBm

./: .flake8  .gitignore  README.md  ergoidcfBm.ipynb  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/ergodicfbm/: __init__.py  core.py
tests/: test_core.py
